--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "owasp-nodejs-goat",
   "private": true,
   "version": "1.3.0",
-  "description": "A tool to learn OWASP Top 10 for node.js developers3",
+  "description": "A tool to learn OWASP Top 10 for node.js developers",
   "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -14,7 +14,7 @@
     "express-session": "^1.13.0",
     "forever": "^2.0.0",
     "helmet": "^2.0.0",
-    "marked": "0.3.9",
+    "marked": "^4.0.12",
     "mongodb": "^2.1.18",
     "needle": "2.2.4",
     "node-esapi": "0.0.1",
