--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "owasp-nodejs-goat",
   "private": true,
   "version": "1.3.0",
-  "description": "A tool to learn OWASP Top 10 for node.js developers3",
+  "description": "A tool to learn OWASP Top 10 for node.js developers",
   "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -53,7 +53,7 @@
     "grunt-mocha-test": "^0.12.7",
     "grunt-npm-install": "^0.3.0",
     "grunt-retire": "^0.3.12",
-    "mocha": "^2.4.5",
+    "mocha": "^9.2.2",
     "nodemon": "^1.19.1",
     "selenium-webdriver": "^2.53.2",
     "should": "^8.3.1",
