--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "owasp-nodejs-goat",
   "private": true,
   "version": "1.3.0",
-  "description": "A tool to learn OWASP Top 10 for node.js developers3",
+  "description": "A tool to learn OWASP Top 10 for node.js developers",
   "main": "server.js",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -13,7 +13,7 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "forever": "^2.0.0",
-    "helmet": "^2.0.0",
+    "helmet": "^5.0.2",
     "marked": "0.3.9",
     "mongodb": "^2.1.18",
     "needle": "2.2.4",
